--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root {
+  --font-principal: "Roboto" sans-serif;
+  --color-primary: #158A47;
+  --color-secondary: #3CA768;
+  --color-tertiary: #5BBC95;
+  --color-yellow: #f1e637;
+  --color-medium: #999999;
+  --color-black: #000000;
+  --color-light: #ffffff;
+}
