--- a/src/app/components/contacta/contacta.component.html
+++ b/src/app/components/contacta/contacta.component.html
@@ -4,10 +4,10 @@
     <div class="container rectangulo">
       <div class="row">
         <div class="col-12 col-md-4 seccion-titulo">
-          ¡Hablemos!
+          Parlem!
         </div>
         <div class="col-12 col-md-4 descripcion">
-          Contáctame para iniciar tu proyecto de desarrollo web y haré que tu visión se vuelva realidad.
+          Contacta'm per iniciar el teu projecte de desenvolupament web i faré que la teva visió es torni realitat.
         </div>
         <div class="col-12 col-md-4">
           <a href="mailto:URBANITAS@ACURBANS.COM">
@@ -27,3 +27,4 @@
     </div>
   </div>
 </section>
+<hr>
