--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,58 @@
 <!-- Pie de pagina (footer) -->
 <footer class="seccion-oscura">
-  FOOTER
+  <section class="container text-center">
+    <div class="row">
+      <div class="col">
+        <h3>Els teus esdeveniments</h3>
+        <a href="#home">
+          <img src="contacta/femho.png" class="card-img-top" alt="Contrata Tus Eventos">
+        </a>
+      </div>
+      <div class="col">
+        <h3>Aquí estem</h3>
+        <img src="contacta/googlemaps.png" alt="Mapa de Localización en GoogleMaps" class="googleMap">
+      </div>
+      <div class="col">
+        <h3>Contacta amb nosaltres</h3>
+        <a href="#contacta">
+          <img src="contacta/urbans.png" alt="Contacta con Urbans" class="contactaUrbans" >
+        </a>
+      </div>
+    </div>
+  </section>
+  <hr>
+  <section class="derechos">
+    <article class="derechos-de-autor">
+      Creado por Felipe Díaz (2024) &#169;
+    </article>
+  </section>
 </footer>
+
+<!--
+<section class="contacta">
+    <div class="card">
+          <div class="card-header">
+            Contracta els teus esdeveniments
+          </div>
+          <div class="card-body">
+            <img src="contacta/femho.png" class="card-img-top" alt="Contrata Tus Eventos">
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            Aquí estem
+          </div>
+          <div class="card-body">
+            <img src="contacta/googlemaps.png" alt="Mapa de Localización en GoogleMaps" class="googleMap">
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            Contacta amb nosaltres
+          </div>
+          <div class="card-body">
+            <img src="contacta/urbans.png" alt="Contacta con Urbans" class="contactaUrbans">
+          </div>
+        </div>
+  </section>
+ -->
