--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -5,7 +5,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <nav class="nav">
-        <a class="nav-link active" aria-current="page" href="#">FEMHO</a>
+        <a class="nav-link active" aria-current="page" href="home">FEMHO</a>
         <a class="nav-link" href="#">DJ URBAN</a>
         <a class="nav-link" href="#">COUNTRY LL&R</a>
         <a class="nav-link" href="#">ROBOTICA</a>
