--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,5 +9,10 @@
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
+
+    <div class="login">
+      <img src="login/avatar.png" alt="Avatar Usuario" class="avatar">
+    </div>
+    
   </div>
 </nav>
