--- a/src/app/components/navigation/navigation.component.css
+++ b/src/app/components/navigation/navigation.component.css
@@ -1,3 +1,20 @@
 :host {
   display: block;
+  nav {
+    background-color: var(--color-primary) !important;
+  }
+  .nav a {
+    font-size: 1.8em;
+    font-weight: bold;
+    font-family: var(--font-secondary) !important;
+    color: var( --color-light) !important;
+    border: 3px solid #000;
+    border-radius: 5px;
+    background-color: var(--color-secondary) !important;
+    margin-right: 10px;
+  }
+
+  .nav a:hover {
+    background-color: var(--color-blue) !important;
+  }
 }
