--- a/src/app/components/contacta/contacta.component.html
+++ b/src/app/components/contacta/contacta.component.html
@@ -16,7 +16,7 @@
               <i class="bi bi-envelope-check-fill"></i>
             </button>
           </a>
-          <a href="telf:606891600">
+          <a href="tel:606891600">
             <button type="button">
               WhatsApp
               <i class="bi bi-whatsapp"></i>
