--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>,
+<div class="container">
+  <img src="home-femho/femho.png" alt="Imagen Femho" class="img-fluid">
+  <p class="home-parrafo">
+    <strong>Al Carmel de Barcelona</strong>, sota el sol que resplendeix, Entre turons i carrerons, la vida s'estremeix. Els bunkers com a testimonis, d'un passat que perdura, <em>I la Rambla del Carmel</em>, amb la seva màgia tan pura.
+    Des del sud arriba la gent, amb les seves rialles i el seu encant, A cada cantonada del barri, hi ha un conte per relatar. Els casals són refugis, on els somnis desperten, I a cada aula es forja, un futur que esperen.
+  </p>
+</div>
