--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -6,10 +6,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <nav class="nav">
         <a class="nav-link active" aria-current="page" href="home">FEMHO</a>
-        <a class="nav-link" href="#">DJ URBAN</a>
-        <a class="nav-link" href="#">COUNTRY LL&R</a>
-        <a class="nav-link" href="#">ROBOTICA</a>
-        <a class="nav-link" href="#">+ ACTIVITATS</a>
+        <a class="nav-link" href="djurban">DJ URBAN</a>
+        <a class="nav-link" href="country">COUNTRY LL&R</a>
+        <a class="nav-link" href="robotica">ROBOTICA</a>
+        <a class="nav-link" href="actividades">+ ACTIVITATS</a>
         <a class="nav-link" href="#contacta">CONTACTA</a>
       </nav>
     </div>
