--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,3 +1,20 @@
 :host {
   display: block;
+  .container {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  .img-fluid {
+    border-radius: 10px;
+  }
+
+  .home-parrafo {
+    font-size: 1.5em;
+    font-weight: bold;
+    font-family: var( --font-text) !important;
+    text-align: left;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 }
