--- a/src/app/components/contacta/contacta.component.html
+++ b/src/app/components/contacta/contacta.component.html
@@ -11,13 +11,13 @@
         </div>
         <div class="col-12 col-md-4">
           <a href="mailto:URBANITAS@ACURBANS.COM">
-            <button type="button">
+            <button type="button" class="btn btn-primary">
               Contacta
               <i class="bi bi-envelope-check-fill"></i>
             </button>
           </a>
           <a href="tel:606891600">
-            <button type="button">
+            <button type="button" class="btn btn-success">
               WhatsApp
               <i class="bi bi-whatsapp"></i>
             </button>
