--- a/src/app/pages/country/country.component.html
+++ b/src/app/pages/country/country.component.html
@@ -1,1 +1,40 @@
-<p>country works!</p>,
+<div class="container">
+  <div class="card mb-3">
+    <div class="row g-0">
+      <div class="col-md-5">
+        <img src="country/activitats_semanals.png" class="img-fluid rounded-start" alt="Country LL&R">
+      </div>
+      <div class="col-md-7">
+        <div class="card-body">
+          <h2 class="card-title">Country LL&R</h2>
+          <p class="card-text">Country, ball en línia. Disposem de monitors
+            voluntaris de la federació espanyola de ball(FEBD).
+            Et necessitem!!! Si vols ballar i saps sevillanes, balls
+            de saló, batxata, ..o altres disciplines fes te tallerista.
+            No fa falta cap titulació de monitor de ball simplement
+            ganes de ballar i transmetre.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card mb-3">
+    <div class="row g-0">
+      <div class="col-md-5">
+        <img src="country/country_dissabtes.png" class="img-fluid rounded-start" alt="Country LL&R">
+      </div>
+      <div class="col-md-7">
+        <div class="card-body">
+          <h2 class="card-title">Country LL&R</h2>
+          <p class="card-text">Country, ball en línia. Disposem de monitors
+            voluntaris de la federació espanyola de ball(FEBD).
+            Et necessitem!!! Si vols ballar i saps sevillanes, balls
+            de saló, batxata, ..o altres disciplines fes te tallerista.
+            No fa falta cap titulació de monitor de ball simplement
+            ganes de ballar i transmetre.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
