--- a/src/app/pages/robotica/robotica.component.html
+++ b/src/app/pages/robotica/robotica.component.html
@@ -1,1 +1,50 @@
-<p>robotica works!</p>,
+<div class="container">
+  <div class="card mb-3">
+    <div class="row g-0">
+      <div class="col-md-5">
+        <img src="robotica/robotica.png" class="img-fluid rounded-start" alt="Robotica per a nens">
+      </div>
+      <div class="col-md-7">
+        <div class="card-body">
+          <h2 class="card-title">Robotica</h2>
+          <p class="card-text">
+            Taller per nens entre 6-14 anys.
+            Disposem de material per donar formacions a
+            classes de 15 alumnes com a molt un cop per
+            setmana.<br>
+            <strong><em>FES-TE SOCI Donatiu: 10€ any</em></strong><br>
+            Els introduïm a un futur totalment actual d’una
+            manera didàctica i divertida. Els ensenyem a
+            programar i fer servir el cervell del robot.
+            En toquem disseny 3D, scratch, bitbloq, mbot,
+            arduino, etc ....
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card mb-3">
+    <div class="row g-0">
+      <div class="col-md-5">
+        <img src="robotica/timebotik.png" class="img-fluid rounded-start" alt="Robotica per a nens">
+      </div>
+      <div class="col-md-7">
+        <div class="card-body">
+          <h2 class="card-title">Robotica</h2>
+          <p class="card-text">
+            Taller per nens entre 6-14 anys.
+            Disposem de material per donar formacions a
+            classes de 15 alumnes com a molt un cop per
+            setmana.<br>
+            <strong><em>FES-TE SOCI Donatiu: 10€ any</em></strong><br>
+            Els introduïm a un futur totalment actual d’una
+            manera didàctica i divertida. Els ensenyem a
+            programar i fer servir el cervell del robot.
+            En toquem disseny 3D, scratch, bitbloq, mbot,
+            arduino, etc ....
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
