--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h2>FEMHO</h2>
   <img src="home-femho/femho.png" alt="Imagen Femho" class="img-fluid">
   <p class="home-parrafo">
     <strong>Al Carmel de Barcelona</strong>, sota el sol que resplendeix, Entre turons i carrerons, la vida s'estremeix. Els bunkers com a testimonis, d'un passat que perdura, <em>I la Rambla del Carmel</em>, amb la seva màgia tan pura.
