--- a/src/app/pages/robotica/robotica.component.html
+++ b/src/app/pages/robotica/robotica.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h2>ROBOTICA PER A NENS</h2>
   <div class="card mb-3">
     <div class="row g-0">
       <div class="col-md-5">
