--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,14 @@
 <nav class="navbar header">
-  <div class="container-fluid ">
+  <div class="container-fluid">
     <div class="myLogo">
-      <img src="logo/NEGRO2.png" alt="Logo" class="logo">
-      <!-- <h1>Associació Cultural Urbans</h1> -->
+      <a>
+        <img src="logo/NEGRO2.png" alt="Logo" class="logo">
+        Associació Cultural Urbans
+      </a>
+
     </div>
+
+    <!--
     <h1>Associació Cultural Urbans</h1>
     <form class="d-flex" role="search">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -13,6 +18,6 @@
     <div class="login">
       <img src="login/avatar.png" alt="Avatar Usuario" class="avatar">
     </div>
-    
+    -->
   </div>
 </nav>
