--- a/src/app/pages/country/country.component.html
+++ b/src/app/pages/country/country.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h2>COUNTRY LL&R</h2>
   <div class="card mb-3">
     <div class="row g-0">
       <div class="col-md-5">
@@ -6,7 +7,7 @@
       </div>
       <div class="col-md-7">
         <div class="card-body">
-          <h2 class="card-title">Country LL&R</h2>
+          <h2 class="card-title">Country</h2>
           <p class="card-text">Country, ball en línia. Disposem de monitors
             voluntaris de la federació espanyola de ball(FEBD).
             Et necessitem!!! Si vols ballar i saps sevillanes, balls
@@ -25,7 +26,7 @@
       </div>
       <div class="col-md-7">
         <div class="card-body">
-          <h2 class="card-title">Country LL&R</h2>
+          <h2 class="card-title">Country</h2>
           <p class="card-text">Country, ball en línia. Disposem de monitors
             voluntaris de la federació espanyola de ball(FEBD).
             Et necessitem!!! Si vols ballar i saps sevillanes, balls
