--- a/src/app/pages/djurban/djurban.component.html
+++ b/src/app/pages/djurban/djurban.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h2>DJ URBAN</h2>
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
