--- a/src/styles.css
+++ b/src/styles.css
@@ -30,3 +30,16 @@ hr {
   border-bottom: 2px solid #000 !important;
   opacity: 1;
 }
+
+h2 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  font-family: var(--font-primary) !important;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-top: 5px solid var(--color-primary) !important;
+  border-bottom: 5px solid var(--color-primary) !important;
+}
