rectificado router-outlet 12/12/2024 12:30

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <app-navigation></app-navigation>
-<div class="conteiner">
+<div class="container">
   <router-outlet />
   <app-contacta></app-contacta>
 </div>
