modificado menu nav 12/12/2024 16:45

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -5,11 +5,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <nav class="nav">
-        <a class="nav-link active" aria-current="page" href="home">FEMHO</a>
-        <a class="nav-link" href="djurban">DJ URBAN</a>
-        <a class="nav-link" href="country">COUNTRY LL&R</a>
-        <a class="nav-link" href="robotica">ROBOTICA</a>
-        <a class="nav-link" href="actividades">+ ACTIVITATS</a>
+        <a class="nav-link active" aria-current="page" routerLink="home">FEMHO</a>
+        <a class="nav-link" routerLink="djurban">DJ URBAN</a>
+        <a class="nav-link" routerLink="country">COUNTRY LL&R</a>
+        <a class="nav-link" routerLink="robotica">ROBOTICA</a>
+        <a class="nav-link" routerLink="actividades">+ ACTIVITATS</a>
         <a class="nav-link" href="#contacta">CONTACTA</a>
       </nav>
     </div>
