--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <app-navigation></app-navigation>
 <div class="container">
-  <router-outlet />
+  <router-outlet></router-outlet>
   <app-contacta></app-contacta>
 </div>
 <app-footer></app-footer>
